spacing, fix a few links

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -109,13 +109,13 @@ h1 a, h2 a, h3 a {
 #articles {
     max-width: 100%;
     font-family: "IBM Plex Sans", Helvetica, Arial, sans-serif;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     grid-column-start: 1;
     grid-column-end: 3;
 }
 
 .date {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-style: italic;
     line-height: 1.7rem;
     font-weight: 300;
@@ -136,15 +136,6 @@ h1 a, h2 a, h3 a {
     margin: 0 0.1rem;
     font-weight: 300;
 }
-
-/*
-.tag {
-    border-radius: 0.25rem;
-    background-color: #262b2d;
-    color: white;
-    padding: 0.15rem 0.2rem;
-}
-*/
 
 .date-tags {
     color:#5b5b5b;
@@ -173,7 +164,6 @@ h1 a, h2 a, h3 a {
     grid-column-start: 1 !important;
     grid-column-end: 3 !important;
     justify-self: stretch;
-    margin-bottom: 0.4rem;
 }
 
 @media (-webkit-min-device-pixel-ratio: 1.95) and (max-width: 1000px) { 
@@ -209,7 +199,6 @@ h1, h2, h3, h4, h5, h5 {
 
 .article h1 {
     color: #3e4a4e;
-    padding:0.15rem 0 0.4rem 0;
     text-align:left;
     font-size: 1.8rem;
     font-weight: 700;
@@ -226,7 +215,6 @@ h1, h2, h3, h4, h5, h5 {
 }
 
 p {
-    padding:0 0 0.4rem 0;
     font-family: "IBM Plex Serif", Garamond, Georgia, serif;
     font-size: 1rem;
 }
@@ -244,14 +232,12 @@ blockquote p {
 
 .article h2 {
     font-size:1.6rem;
-    padding:0.6rem 0 0.3rem 0;
     font-weight: 500;
     line-height: 1.7rem;
 }
 
 .article h3 {
     font-size:1.3rem;
-    padding:0.6rem 0 0.3rem 0;
     font-weight: 500;
 }
 
@@ -260,7 +246,7 @@ a {
 }
 
 .article ul, .article ol {
-    margin: 0 0 0.6rem 1.5rem;
+    margin-left: 1.5rem;
 }
 
 .article li {
@@ -388,7 +374,6 @@ small {
 hr {
     border: none;
     margin: 0;
-    margin-bottom: 0.4rem;
 }
 
 hr::before {
@@ -404,12 +389,13 @@ hr::before {
     border-top-width: 0.1rem;
     border-top-style: solid;
     border-color: rgb(104, 104, 104);
-    margin-top: 0.4rem;
 }
 
 .footer hr::before {
     content: '';
 }
+
+/* section links */
 
 :is(h2, h3, h4, h5, h6) .section-link {
     font-style: italic;
@@ -420,4 +406,31 @@ hr::before {
 :is(h2, h3, h4, h5, h6):hover .section-link {
     color: grey;
     visibility: visible;
+}
+
+/* content vertical paddings. in general, we add spacing _after_ the elements */
+
+.article h1 {
+    padding: 0 0 0.5rem 0;
+}
+
+p {
+    padding: 0 0 0.5rem 0;
+}
+
+hr, ul, ol, .article .sourceCode, .article pre, .article h1, .article h2, .article h3 {
+    margin-bottom: 0.5rem;
+}
+
+/* for this one we make an exception and margin upwards to separate sections a bit */
+.article h2 {
+    margin-top: 0.5rem;
+}
+
+#articles {
+    margin-bottom: 0.5rem;
+}
+
+#articles h2 {
+    margin-bottom: 0.10rem;
 }
